Minor async fetch fix. Style alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   max-width: 1280px;
 
   .header {
+    padding-top: 16px;
     text-align: center;
   }
   .centered-content {
